--- a/Buenos_Airesan_lidnanznam.mw
+++ b/Buenos_Airesan_lidnanznam.mw
@@ -5,8 +5,8 @@
 Lidnanznaman üläpalan dizain (päiväižen sädeged) om [[Argentinan flag]]an pojav, sikš miše Buenos Aires om sen pälidnaks. Orl om ottud [[Gabsburgad]]-dinastijan znamaspäi, se om lidnan alusenpanendan ispanijalaižil simvolaks. Ujund meredme i kalanpüdand oma znamasižed lidnan täht, ka kaks' purehlaivad merilainhil kuvadasoiš lidnanznaman ezimal.
 
 == Edeližed lidnanznamad ==
-<gallery>
-Arms of Buenos Aires (Flag).svg|La Trinidad-lidnan da sen Buen Air-portan Huan De Garai-ohjandajan painandznam, Buenos Airesan faktine lidnanznam sen toštmižalusenpanendan jäl'ghe.
+<gallery mode="packed" heights="125px">
+Arms of Buenos Aires (Flag).svg|La Trinidad-lidnan da sen Buen Air-portan Huan De Garai-ohjandajan painandznam, Buenos Airesan faktine lidnanznam sen toštmižalusenpanendan jäl'ghe vl 1580.
 Escudo de la Ciudad de Buenos Aires.png|Ezmäine todesine Buenos Airesan lidnanznam, om sätud vl 1649 i vahvištadud oficialižešti vl 1923.
 Seal of the Buenos Aires City (2003 - 2006).svg|Lidnanznam vll 2003−2006.
 </gallery>
