+ galerei, +hom, aktualizacii

--- a/Jasnii.mw
+++ b/Jasnii.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Jasnijan lidnanznam
  | Flag text = Jasnijan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 15,675
- | Voz' = 2017
- | Pind = 
+ | Eläjiden lugu = 15,092
+ | Voz' = 2021
+ | Pind = 67
  | Fail = Yasny.jpg
- | Pämez' = Tat'jana Silant'jeva<br/>(2015—)
+ | Pämez' = Tat'jana Silant'jeva<br/>(tal'vku 2015—)
  | Telefonkod = +7-35368-xx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -20,22 +20,31 @@
 Vl 1935 löuzihe [[azbest]]ad läz kazahlaižiden Kijembai-küläd. Jasnii-eländpunktan aluz om pandud vl 1961 žiloks samha [[azbest]]ad Kijembain löudmižsijal da sauvomha Kijembain azbestan kaivuzkombinatad. Žilo oli lidnanvuiččen vspäi 1962. Se sai lidnan statusad vl 1979.
 
 == Geografijan andmused ==
-Lidn sijadase Suvižes [[Uralmäged|Uralantagaižes]], 360 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Orenburg]]hasai om 480 km päivlaskmha, [[Kazahstan]]an röunhasai — 24 km suvhe ([[Aktoben agj]]). Lähembaine Mägipölvaz-raudtestancii ({{lang-ru|Горный Лён}}) sijadase 3 km suvhe lidnaspäi. Lähembaine lidn om [[Orsk]] 115 km päivlaskmha avtotedme vai 95 km orhal.
+Lidn sijadase Suvižes [[Uralmäged|Uralantagaižes]], 360 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Orenburg]]hasai om 480 km päivlaskmha, [[Kazahstan]]an röunhasai — 24 km suvhe ([[Aktoben agj]]). Lähembaine Mägipölvaz-raudtestancii ({{lang-ru|Горный Лён}}) sijadase koume kilometras suvhe lidnaspäi. Lähembaine lidn om [[Orsk]] 115 km päivlaskmha avtotedme vai 95 km orhal.
 
 Sodalendimpöud sijadase Jasnijan lodehližel röunal, Komarovskijan lidnümbrikos. Ühtennimižed sodapoligon da kosmodrom (radab vspäi 2006) oma läz lidnad.
 
 Kaik 17 žilod mülüdas lidnümbrikho Jasnijan ližaks. Lidnümbrikon pind — 3565,32 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 17 363 ristitud, nell' videndest rajonan ristitištos. Kaikiš suremb ristitišt oli edel [[Komarovskii (Orenburgan agj)|Komarovskijan lidnümbrikon (sauptud administrativiž-territorialine ühtnik)]] sädandad — vozil 1989, 2003 i 2004, 26..27 tuhad eläjid. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 17 363 ristitud, nell' videndest rajonan ristitištos, lidnümbrikon — 22 406 ristitud. Kaikiš suremb lidnan ristitišt oli edel [[Komarovskii (Orenburgan agj)|Komarovskijan lidnümbrikon (sauptud administrativiž-territorialine ühtnik)]] sädandad — vozil 1989, 2003 i 2004, 26..27 tuhad eläjid.
 
-Kaivuztehnologine tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid<ref>[http://sobory.ru/geo/locat/25485 Jasnijan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: Sündun Voznesenjan i Panteleimon-spravitajan.
+
+Kaivuztehnologine tehnikum<ref>[http://gapougtt56.ru/ Jasnii-lidnan Kaivuztehnologižen tehnikuman sait (''gapougtt56.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+На Кумакском водохранилище - panoramio.jpg|Kumakskoje-vezivaradimel (2011)
+General View snyi.jpg|Jasnii-kosmodroman sauvused vl 2012
+</gallery>
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused==
-* [http://ясный-го.рф/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''ясный-го.рф'').] {{ref-ru}}
+* [http://ys.orb.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''ys.orb.ru'').] {{ref-ru}}
+{{Commons|Category:Yasny, Orenburg Oblast}}
 
 {{Orenburgan agjan lidnad}}
 
