*Empty MediaWiki Message*

--- a/Jasnii.mw
+++ b/Jasnii.mw
@@ -20,7 +20,7 @@
 Vl 1935 löuzihe [[azbest]]ad läz kazahlaižiden Kijembai-küläd. Jasnii-eländpunktan aluz om pandud vl 1961 žiloks samha [[azbest]]ad Kijembain löudmižsijal da sauvomha Kijembain azbestan kaivuzkombinatad. Žilo oli lidnanvuiččen vspäi 1962. Se sai lidnan statusad vl 1979.
 
 == Geografijan andmused ==
-Lidn sijadase Suvižes [[Uralmäged|Uralantagaižes]], 360 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Orenburg]]hasai om 480 km päivlaskmha, [[Kazahstan]]an röunhasai — 24 km suvhe ([[Aktoben agj]]). Lähembaine Mägipölvaz-raudtestancii ({{lang-ru|Горный Лён}}) sijadase koume kilometras suvhe lidnaspäi. Lähembaine lidn om [[Orsk]] 115 km päivlaskmha avtotedme vai 95 km orhal.
+Lidn sijadase Suvižes [[Uralmäged|Uralantagaižes]], 360 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Orenburg]]hasai om 480 km päivlaskmha, [[Kazahstan]]an röunhasai — 24 km suvhe ([[Aktoben agj]]). Lähembaine Mägipölvaz-raudtestancii ({{lang-ru|Горный Лён}}) sijadase koumes kilometras suvhe lidnaspäi. Lähembaine lidn om [[Orsk]] 115 km päivlaskmha avtotedme vai 95 km orhal.
 
 Sodalendimpöud sijadase Jasnijan lodehližel röunal, Komarovskijan lidnümbrikos. Ühtennimižed sodapoligon da kosmodrom (radab vspäi 2006) oma läz lidnad.
 
