+galerei, +hom, aktualizacii

--- a/Mednogorsk.mw
+++ b/Mednogorsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Mednogorskan lidnanznam
  | Flag text = Mednogorskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 25,610
- | Voz' = 2017
+ | Eläjiden lugu = 24,321
+ | Voz' = 2021
  | Pind = 91.33
  | Fail = Въезд в Медногорск - panoramio.jpg
- | Pämez' = Dmitrii Sadovenko (2013—)
+ | Pämez' = Andrei Nižegorodov<br />(kül'mku 2019—)
  | Telefonkod = +7-35379-xx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -22,20 +22,35 @@ Eländpunktan aluz om pandud vl 1933 kuti vas'kižrikkombinat. Vl 1939 ühtištu
 == Geografijan andmused ==
 Lidn sijadase Bläv-jogen randal ({{lang-ru|Блява}}, [[Ural (jogi)|Ural-jogen]] oigedpol'ne bassein), [[Uralmäged|Uralmägiden]] suvipäivlaskmaižil pautkil, 238..478 m korktusil. Matkad [[Orenburg]]hasai om 233 km päivlaskmha, [[Orsk]]hasai — 51 km päivnouzmha. Lähembaine lidn om [[Kuvandik]] 20 km päivlaskmha avtotel.
 
-Mednogorsk jagase 11 istorižikš sündnudehe lidnanlaptha. Blävtamak-žilo (946 rist. vl 2010), Bläv-stancii (18 rist. vl 2010) i 4 küläd mülüdas lidnümbrikho Mednogorskan ližaks. Lidnümbrikon pind om 353,63 nellikkilometrad.
+Mednogorsk jagase 11 istorižikš sündnudeks lidnanlaptaks. Blävtamak-žilo (946 rist. vl 2010), Bläv-stancii (18 rist. vl 2010) i nell' küläd mülüdas lidnümbrikho Mednogorskan ližaks. Lidnümbrikon pind om 353,63 nellikkilometrad.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 27 292 ristitud, lidnümbrikon — 29 120 ristitud. Kaikiš suremb lidnan ristitišt oli 39 tuhad eläjid vl 1967.
 
 Rahvahad (vl 2010, enamba 1%, ozutadud rahvahudenke): [[venälaižed]] — 82,0%, [[baškiralaižed]] — 8,7%, [[totarlaižed]] — 4,1%, [[ukrainalaižed]] — 2,2%, toižed rahvahad — 3,0%.
 
+Edeline lidnümbrikon pämez' om Dmitrii Sadovenko (kezaku 2013 — sügüz'ku 2019).
+
 == Ižanduz ==
-Ižandusen päsarakod oma vas'kmetallurgii, elektromašiništon pästand («Uralelektro»-tegim), sauvondmaterialiden tehmine (savič, šebin'), sömtegimišt. Professionaližen keskopendusen aluzkundad: industrialine kolledž, medicinine kolledž.
+Ižandusen päsarakod oma [[vas'k]][[metallurgii]] (Mednogorskan vas'kižrikkombinat<ref>[http://mmsk.ugmk.com/ Mednogorskan vas'kižrikkombinatan sait (''mmsk.ugmk.com'').] {{ref-ru}}</ref>), elektromašiništon pästand («Uralelektro»-tegim), sauvondmaterialiden tehmine (savič, šebin'), sömtegimišt.
+
+Professionaližen keskopendusen aluzkundad: Mednogorskan industrialine kolledž<ref>[http://www.gapoumik.ru/ Mednogorskan industrialižen kolledžan sait (''gapoumik.ru'').] {{ref-ru}}</ref>, Orskan medicinižen kolledžan Mednogorskan filial.
 
 Avtobusad da maršruttaksid oma kundaližeks transportaks. Raudtestancii om «[[Orenburg]] — [[Orsk]]»-jonol lidnan suves.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Mednogorsk, Orenburg Oblast, Russia - panoramio (14).jpg|Lidnan irdan nägu vl 2014
+Mednogorsk, Orenburg Oblast, Russia - panoramio (17).jpg|Lidnan irdan nägu vl 2014
+Mednogorsk, Orenburg Oblast, Russia - panoramio (4).jpg|«Metallurg»-kul'turkeskuz om kuvan keskuzpalas (2015)
+</gallery>
+
+== Homaičendad ==
+<references />
+
 == Irdkosketused ==
-* [http://mo-mednogorsk.orb.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''mo-mednogorsk.orb.ru'').] {{ref-ru}}
+* [http://www.gorodmednogorsk.ru/ Lidnan administracijan oficialine sait (''gorodmednogorsk.ru'').] {{ref-ru}}
+* [http://mo-mednogorsk.orb.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''mo-mednogorsk.orb.ru'').] {{ref-ru}}
 {{Commons|Category:Mednogorsk}}
 
 {{Orenburgan agjan lidnad}}
