/* Päčihe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Päč.mw
+++ b/Päč.mw
@@ -78,6 +78,7 @@ Ku pertiš om karzin, se päč om seibhiš. Läz päčid om karzinlaud (karzinla
 == Päčihe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
+* ''Hot' sirda päč toižhe sijha, a üks'-se ed ole radnik.'' (ei voi ozaita kenele-ni)
 * ''Poig lajib — libu päčile, vävu lajib — kacu, kus uks' om.''
 * ''Päčid ed vargasta / Päčid ei vargastagoi.''
 * ''Päčita ei sa tal'ved eläda.''
