--- a/Käzi.mw
+++ b/Käzi.mw
@@ -42,6 +42,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Käzi käden pezeb, i molembad oma puhthad.''
 * ''Käzi pit'k, ulotub kaiktäna.''
 * ''Käzil jo ed ladi.''
+* ''Mam kädel noustatab i panetab.''
 * ''Mehel om mela kädes, venehen jumal veb.''
 * ''Miččen kobr kändab, mugoman i hibj kandab.''
 * ''Midä käzi tegeb, sidä sil'm kacub.''
