--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -106,6 +106,7 @@
 == Heimolaižihe sidodud vepsän muštatišed ==
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
+* ''Anoped ei ole, ka munad Äipäivän ei antkoi.''
 * ''Anopel om pit'k hambaz.'' (ei jäta muite)
 * ''Anopespäi armastust, ku habaižes puspäi lämäd.''
 * ''Haugenpä — bobulin loun, ahvenanpä — anopen loun.''
