*Empty MediaWiki Message*

--- a/Äipäiv.mw
+++ b/Äipäiv.mw
@@ -5,7 +5,7 @@
 Äipäivän praznuičendan dat vajehtase kaiken, oigetas sidä ezmäižen pühäpäivän täuz'kudmaižen jäl'ges. Praznik zavodiše pol'öl pühäkodiš: rahvaz pajatab loičendoid, sid' kävub pühäkodiš ümbri.
 
 == Oigenduz sur'il'mas ==
-Äipäivän znam om mujutadud [[kanamunad]]. Ezmäi todas niid pühäkodihe, sid' lahjoitas heimolaižile, susedoile, pakičijoile. Om mugoine vero, miše anopile om tarbiž lahjoita vävule 100 munad.
+Äipäivän znam ([[äipäivmuna]]) om mujutadud [[kanamunad]]. Ezmäi todas niid pühäkodihe, sid' lahjoitas heimolaižile, susedoile, pakičijoile. Om mugoine vero, miše anopile om tarbiž lahjoita vävule 100 munad.
 
 Mugažo kävutadas munid vändoiš. Ozutesikš, mehed voibišteldas mujutadud muniden iškendas da muniden turutandas. Turutadas munid mägeihuzidme vai pit'kidme laudoidme, edeližen munan sordandan metonke. Vägestai sab sortud munan.
 
