--- a/Äipäivmuna.mw
+++ b/Äipäivmuna.mw
@@ -1,7 +1,12 @@
-[[Fail:Belarusian Easter Eggs.jpg|thumbnail|right|250px|Mujutud äipäivmunad [[Vaugedvenäma]]späi]]
-'''Äipäivmuna''' om [[mujutud munad|mujutud]] vai [[pisank|kirjutud]] {{k|расписанное}} muna, kudamban lahjoitas [[Äipäiv]]än kaikiš [[hristanuskond]]aližiš valdkundoiš.
+[[Fail:Belarusian Easter Eggs.jpg|thumbnail|right|250px|Mujutadud äipäivmunad [[Vaugedvenäma]]späi]]
+'''Äipäivmuna''' om [[mujutadud munad|mujutadud]] vai [[pisank|kirjutadud]] {{k|расписанное}} muna, kudamban lahjoitas [[Äipäiv]]än kaikiš [[hristanuskond]]aližiš valdkundoiš.
 
-Muna om londuzvägen {{k|плодородия}} da udessündundan veroline znam. Hristanuskondas äipäivmuna znamoičeb kut [[Sündun Grob]], ninga uden elon zavodind-ki; s.v. hristanuskondaližile nece om muštatuz [[Iisus Hristos|Iisusan Hristan]] eläbzdusen polhe, päzutandas da igähižes elos todesižiden uskondaližiden täht.
+Muna om londuzvägen (kazvateližusen) da udessündundan veroline znam. Hristanuskondas äipäivmuna znamoičeb kut [[Sündun Grob]], ninga uden elon zavodind-ki; s.v. hristanuskondaližile nece om muštatuz [[Iisus Hristos|Iisusan Hristan]] eläbzdusen polhe, päzutandas da igähižes elos todesižiden uskondaližiden täht.
+
+== Äipäivmunaha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Anoped ei ole, ka munad Äipäivän ei antkoi.''
+</blockquote>
 
 == Kacu mugažo ==
 * [[Äipäiv]]
@@ -9,7 +14,9 @@ Muna om londuzvägen {{k|плодородия}} da udessündundan veroline znam.
 * [[Kulič]]
 * [[Pash]] {{k|творожная пасха}}
 * [[Virtualine äipäivmuna]]
-{{stub}}
 
+{{Commons}Category:Easter eggs}}
+
+{{stub}}
 [[Kategorii:Äipäiv|m]]
 [[Kategorii:Munad sömäs]]
