*Empty MediaWiki Message*

--- a/Äipäivmuna.mw
+++ b/Äipäivmuna.mw
@@ -15,7 +15,7 @@ Muna om londuzvägen (kazvateližusen) da udessündundan veroline znam. Hristanu
 * [[Pash]] {{k|творожная пасха}}
 * [[Virtualine äipäivmuna]]
 
-{{Commons}Category:Easter eggs}}
+{{Commons|Category:Easter eggs}}
 
 {{stub}}
 [[Kategorii:Äipäiv|m]]
