/* Heimolaižihe sidodud vepsän muštatišed */ +

--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -122,6 +122,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
 * ''Poig lajib — libu päčile, vävu lajib — kacu, kus uks' om.''
 * ''Poigas vähäd, tütres tühjad.''
+* ''Ühtes kašlišpäi oma langenuded.'' (heimolaižiš)
 * ''Ühtes päiväižes hatrad kuivaziba.'' (edahaižen pol'ven heimolaižiš)
 </blockquote>
 
