/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -26,6 +26,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Hüvä mez' andab vähäižespäi, a hond ei anda äjaspäi-ki.''
 * ''Hüväd mest om mil muštelta.''
 * ''Hüväl akal ka mužik-ki hüvä om.''
+* ''Hüvän mužikan taga i ak om hüvä.''
 * ''Iče ole mužik, siloi anda toižile-ki arv.''
 * ''Kaikuččel mehel oma erazvuiččed meled.''
 * ''Kala ecib süvemban, a mez' paremban.''
