/* Naižhe sidodud vepsän muštatišed */ +

--- a/Naine.mw
+++ b/Naine.mw
@@ -14,6 +14,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 * ''Hebon higoho da akan voikhu ala kacu.''
 * ''Hibuz pit'k, a mel' lühüd.'' (naižiden polhe)
 * ''Hüväl akal ka mužik-ki hüvä om.''
+* ''Hüvän mužikan taga i ak om hüvä.''
 * ''Kaiked tot akale ala sanu.''
 * ''Kana eile lind, ak eile ristit.''
 * ''Ken emägaks rodiše, ka se ei ole ristit.'' (naižen jügedan ozan polhe)
