--- a/Sobad.mw
+++ b/Sobad.mw
@@ -90,7 +90,7 @@ Uniform om märitud büdžetorganizacijoiden radnikoiden da valdkundmehiden täh
 == Sobihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Mez' ei voi olda sobita.''
-* ''Miččed oma kadjad, ka mugoi räcin-ki.''
+* ''Miččed oma kadjad, ka mugoi räcin-ki.'' (mitte mužik, mugoine ak-ki)
 * ''Pen' Makaraine kaikid sobitab (negl).''
 * ''Sömäta joksed läbi pöudos, a alasti ei sa.''
 </blockquote>
