/* Sobihe sidodud vepsän muštatišed */ formitez

--- a/Sobad.mw
+++ b/Sobad.mw
@@ -87,12 +87,17 @@ Uniform om märitud büdžetorganizacijoiden radnikoiden da valdkundmehiden täh
 | 54
 |}
 
-== Sobihe sidodud vepsän muštatišed ==
+== Sobihe sidodud vepsän muštatišed i ozoitesed ==
+=== Muštatišed ===
 <blockquote>
 * ''Mez' ei voi olda sobita.''
 * ''Miččed oma kadjad, ka mugoi räcin-ki.'' (mitte mužik, mugoine ak-ki)
-* ''Pen' Makaraine kaikid sobitab (negl).''
 * ''Sömäta joksed läbi pöudos, a alasti ei sa.''
+</blockquote>
+
+=== Ozoitez ===
+<blockquote>
+* ''Pen' Makaraine kaikid sobitab.'' (negl)
 </blockquote>
 
 == Kacu mugažo ==
