--- a/Sobad.mw
+++ b/Sobad.mw
@@ -13,11 +13,12 @@ Jumalankodikundan valdoičendan pord märiči keskaigaižen ristitun elonmahtust
 === Uz' Aig ===
 [[XIX. voz'sada|XIX. voz'sadal]] [[purumašin]]ad da [[elektruz|elektrust]] sädihe, sen tagut manufakturoiden tehnologijad saiba ut korktut. Vl 1790 [[Žakkar Žozef Mari|Žozef Mari Žakkar]] sädi [[Žakkardan stavad|ühtennimižiden staviden]], se lujeni poimetišen tarkoiktust da kanghiden tehmižen pigut. Mašinoil ratud sobad tegihe odvaks kaikiden ristituiden täht. Edel sidä sobad jämedan ümbriradmižen materiališpäi dominiruiba, a sobid hoikiš materiališpäi vaiše [[aristokrat]]ad da elokahad ristitud panihe. Necil pordolpäi nügüdläižed sobiden tipad tuliba meihepäi: hibjan kabardajad sobad, lühüdan hijamanke, kezaližed da tal'veližed, muzevan mujun kanghišpäi. Sanitariž-gigijenižiden da ekonomižiden arvoimižiden paremboičend vei sihe azjaha, miše [[Evrop]]an da [[Pohjoižamerik]]an ristituiden enambuz paneškanzi alembaižid sobid.
 
-== Sobiden nügüdläižed tipad<ref>Силаева М.А. Пошив изделий по индивидуальным заказам: учебник для начального профобразования. 7-е изд., перераб. — М.: ИЦ Академия, 2012. — Lp. 6. ISBN 978-5-7695-5673-9. {{ref-ru}}</ref><ref>Радченко И.А. Основы конструирования и моделирования одежды: учебник для начального профобразования. 1-е изд. — М.: ИЦ Академия, 2012. — Lp. 11. ISBN 978-5-7695-8444-2. {{ref-ru}}</ref> ==
+== Sobiden nügüdläižed toižendad ==
+''Nece jaguz om sätud openduzkirjoiden<ref>Силаева М.А. Пошив изделий по индивидуальным заказам: учебник для начального профобразования. 7-е изд., перераб. — М.: ИЦ Академия, 2012. — Lp. 6. ISBN 978-5-7695-5673-9. {{ref-ru}}</ref><ref>Радченко И.А. Основы конструирования и моделирования одежды: учебник для начального профобразования. 1-е изд. — М.: ИЦ Академия, 2012. — Lp. 11. ISBN 978-5-7695-8444-2. {{ref-ru}}</ref> mödhe.''
 === Kodiš kävutadud sobad ===
 Nened sobad oma pidamha kundaližiš sijiš da kodiš tobjimalaz.
 
-Alajagadas tipihe:
+Alajagadas toižendoikš:
 * ''Kodihine'' — komfortižed funkcionaližed sobad panemha joudjal aigal.
 * ''Jogapäiväline'' — lähtemha kodišpäi — radole (voib olda [[dress kod]]), adivoihe, aigtegoile. Se pidab kožuda situacijha, ristitun mel'kuvad formiruib.
 * ''Tulemha'' — sobad üläihastusen, vasthaotandan, praznikan, pühänikan täht. Sättub [[dress kod|dress kodale]].
