/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -20,6 +20,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Edel raud ratteb, konz mehen sana katteb.''
 * ''Ei kaik mehed olgoi, kudambad kadjoid kandištas.''
 * ''Ei nimi mest pahenda, a mez' nimen.''
+* ''Ei ole sur' mez', da kaikid vanhemboičeb.'' (lapses)
 * ''Ei olnu se mez' bedas, ken toižele ei abuta.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
 * ''Hondod mest hüväl vaihel ed johtuta.''
