--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -111,6 +111,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Anopespäi armastust, ku habaižes puspäi lämäd.''
 * ''Haugenpä — bobulin loun, ahvenanpä — anopen loun.''
 * ''Heimod om äi, söda ei kus.''
+* ''Hubaine — da tütär, a hüvä — da nado.''
 * ''Hüvä vävu, da harvemba kävu.''
 * ''Hüväd susedad pahaze heimho ed vajehta.''
 * ''Kanzata om paha elo.''
