/* Eloho sidodud vepsän muštatišed */ +

--- a/Elo.mw
+++ b/Elo.mw
@@ -25,6 +25,7 @@ Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipoteti
 * ''Ken ridata eläb, se abidata koleb.''
 * ''Ken tirpab, se hätken eläb.''
 * ''Kolijas eläbad ed tege.''
+* ''Sülen-se eläd, a vaksad ei sa eläda.''
 </blockquote>
 
 == Kacu mugažo ==
