/* Eländkodihe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -188,6 +188,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 * ''Pert' tehmata ei tule.''
 * ''Pästa erast mest kündusele, ka hän jumalčogaha-ki ličese.''
 * ''Toižes kodiš i vet toižin kandištas.''
+* ''Vanhale lähtta ičeze kodišpäi, kuti udes sünduda.''
 </blockquote>
 
 === Ozoitesed ===
