/* Eländkodihe sidodud vepsän muštatišed da ozoitesed */

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -184,7 +184,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 <blockquote>
 * ''Hüvä emäg tühjalaz pert'he ei tule.''
 * ''Meiden pertid sänke ei ridelkoi.''
-* ''Melev om pertine, a avadimen kadoti.''
+* ''Melev om pertine, a avadimen kadoti.'' (äi mel't)
 * ''Pert' tehmata ei tule.''
 * ''Pästa erast mest kündusele, ka hän jumalčogaha-ki ličese.''
 * ''Toižes kodiš i vet toižin kandištas.''
