--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,4 +1,4 @@
-[[Fail:2022 Russian invasion of Ukraine.svg|thumbnail|right|450px|Venäman armijan sodategendoiden Ukrainan territorijas aktualine kart.
+[[Fail:2022 Russian invasion of Ukraine colorblind friendly.svg|thumbnail|right|450px|Venäman armijan sodategendoiden Ukrainan territorijas aktualine kart.
 ----
 <font color="red">rusked</font> — territorii Venäman armijan i «LDNR»:an separatistoiden kontrolin al;<br><font color="darkgoldenrod">pakuine</font> — Ukrainan territorii (pro-)venämalaižen kontrolita;<br>''tomarad'' — (pro-)venämalaižen (rusttad) vai ukrainalaižen (pakuižed) sodavägiden edenendoiden čuraduz;<br>💥 — iškendad Ukrainan eländpunktoihe]]
 '''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''', vai ''Venäman soda Ukrainan vaste'', ''Venäman agressii Ukrainan vaste'' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция}}; voimusine ''specoperacijan'' peitnimi — ''«Mangustan heituz»'', {{lang-ru|„Бросок мангуста“}}) om järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo Venäman [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] da [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud. Aigemba il'mestuiba äiluguižed znamad, miše hogahtuz oleskelda voib; Putin da tobmuz ei tundištanugoi niid todesižikš. 
