*Empty MediaWiki Message*

--- a/Vanh_Oskol.mw
+++ b/Vanh_Oskol.mw
@@ -9,7 +9,7 @@
  | Voz' = 2019-01-01
  | Pind = 200,8
  | Fail = Lenin str Stary Oskol.jpg
- | Pämez' = Aleksandr Sergijenko<br />(kül'mku 2017—)
+ | Pämez' = Andrey Chesnokov<br />(kül'mku 2021—)
  | Telefonkod = +7-4725-xxx-xxx
  | Avtokod = 31
  | Aigvö = [[UTC]]+3 (MSK+0)
