--- a/Vanh_Oskol.mw
+++ b/Vanh_Oskol.mw
@@ -9,7 +9,7 @@
  | Voz' = 2019-01-01
  | Pind = 200,8
  | Fail = Lenin str Stary Oskol.jpg
- | Pämez' = Andrey Chesnokov<br />(kül'mku 2021—)
+ | Pämez' = Andrei Česnokov<br />(tal'vku 2021—)
  | Telefonkod = +7-4725-xxx-xxx
  | Avtokod = 31
  | Aigvö = [[UTC]]+3 (MSK+0)
@@ -22,10 +22,12 @@ Eländpunktan aluz om pandud vl 1593 kuti ''Oskol''-sodakordon valdkundröunanno
 == Geografijan andmused ==
 Lidn sijadase Oskol-jogen randoil ([[Severskii Donc]]an hura ližajogi), 150 m ü.m.t. keskmäižel korktusel. Matkad [[Belgorod]]hasai om 117 km suvipäivlaskmha orhal vai 140 km avtotedme. Lähembaine lidn om [[Gubkin (lidn)|Gubkin]], om 10 km matkad päivlaskmha sen röunhasai.
 
-Vanh Oskol jagase kudhe territorialižhe rajonha: Keskuzline, Suvipäivlaskmaine, Pohjoižpäivnouzmaine, Raudten, Kotölan i Metallurgine rajonad. Kaik 78 eländpunktad mülüdas lidnümbrikho Vanhan Oskolan ližaks. Lidnümbrikon pind — 1693,5 km².
+Vanh Oskol jagase kudeks territorialižeks rajonaks: Keskuzline, Suvipäivlaskmaine, Pohjoižpäivnouzmaine, Raudten, Kotölan i Metallurgine rajonad. Kaik 78 eländpunktad mülüdas lidnümbrikho Vanhan Oskolan ližaks. Lidnümbrikon pind — 1693,5 km².
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 221 085 ristitud, lidnümbrikon — 256 542 ristitud. Kaikiš suremb lidnan ristitišt oli 224 153 eläjad vl 2018. Vl 2017 kaik 259 986 ristitud elihe lidnümbrikos, sidä kesken 223 360 ristitud lidnas.
+
+Edeline lidnümbrikon pämez' om Aleksandr Sergijenko (kül'mku 2017 — tal'vku 2021).
 
 == Ižanduz da transport ==
 Lidn šingotase [[raud]]an metallurgijan keskuseks sijaližel torhudel: elektrometallurgine kombinat i Stoilenskii-küllästamižtegim. Toižed sarakod oma sömtegimišt (leibänedheotandad, bekon, konditerfabrikad, maidkombinat, kalategim), mašiništonsauvomine (tegim metallurgijan täht, demfermašinoiden tegim, gidravline mašiništ), sauvondmaterialiden tehmine (cement, metalližkonstrukcijad, tagodud tegesed), mugažo plastmassantegim radab lidnas.
