--- a/Isangel.mw
+++ b/Isangel.mw
@@ -16,9 +16,9 @@
 [[Fail:Tannamap.png|thumb|left|250px|Lidnan sijaduz sarel]]
 '''Isangel''' (mugažo [[bislama]]-, [[francijan kel'|francijan]] da [[anglijan kel'|anglijan]] kelil) om [[Vanuatu]]n lidn valdkundan suves. Se om [[Tafea]]-agjan administrativine keskuz.
 
-Lidn sijadase Tann-saren päivlaskmaižel randal, kukhal 64 m ü.m.t. korktusenke, Tukosmer-mägen lodehliženno pohjanno. Isangelan päpala ühtenzoitase mererandanke avtoteil.
+Lidn sijadase Tann-saren päivlaskmaižel randal, kukhal 64 m ü.m.t. korktusenke, Tukosmer-mägen lodehliženno pohjanno. Isangelan päpala ühtenzoitase mererandanke avtoteil. Matkad [[Korallmeri|Korallmeren]] randhasai om 1 km suvipäivlaskmha orhal, [[Lenakel (lidn)|Lenakel]]-porthasai om 2 km lodeheze.
 
-Vl 2009 lidnan eläjiden lugu oli 1 437 ristitud. Eläjad oma melanezijalaižed, pagištas [[lenakel]]-kelel i [[bislam]]al.
+Vl 2009 lidnan eläjiden lugu oli 1 437 ristitud. Eläjad oma melanezijalaižed, pagištas [[lenakel (kel')|lenakel]]-kelel i [[bislam]]al.
 
 == Homaičendad ==
 <references />
