--- a/Äipäivmuna.mw
+++ b/Äipäivmuna.mw
@@ -3,6 +3,8 @@
 
 Muna om londuzvägen (kazvateližusen) da udessündundan veroline znam. Hristanuskondas äipäivmuna znamoičeb kut [[Sündun Grob]], ninga uden elon zavodind-ki; s.v. hristanuskondaližile nece om muštatuz [[Iisus Hristos|Iisusan Hristan]] eläbzdusen polhe, päzutandas da igähižes elos todesižiden uskondaližiden täht.
 
+Sab kävutada kanamunid da toižiden linduiden munid, ratud munid mugažo ([[Faberžen munad]]). Mujutadud munan rusked muju simvoliziruib letud ristale Hristan vered, ühtenaigašti ozutab Päzutajan arvokahust carikš. Ottas [[lauk (kazmuz)|laukan]] kuivatud kor't londuseližeks mujutimeks. Sab mujutada munid toižil-ki mujuil.
+
 == Äipäivmunaha sidodud vepsän muštatiž ==
 <blockquote>
 * ''Anoped ei ole, ka munad Äipäivän ei antkoi.''
