--- a/Lukumades.mw
+++ b/Lukumades.mw
@@ -1,12 +1,14 @@
 [[Fail:Loukoumades.jpg|thumb|right|250px|Lukumades]]
-'''Lukumades''' ({{lang-el|λουκουμάδες}}, {{lang-tr|lokma}}) om(a) [[Grekanman keitand|grekan]], [[Turcijan keitand|turkan]] da [[Araban keitand|araban]] keitandoiden mäged emäguz, [[pončik]]an pojav.
+'''Lukumades''' ({{lang-el|λουκουμάδες}} ''Loukoumades'', {{lang-tr|lokma}}, {{lang-ar|لقمة‎}} ''lukmāt'', لقمة القاضي‎ ''lukmat al-kādi'') om(a) [[Grekanman keitand|grekan]], [[Turkanman keitand|turkan]] da [[araban keitand|araban]] keitandoiden maged emäguz, [[pončik]]an pojav.
 
-Tehtas [[septahtaz|septahthaspäi]] [[korič]]un ližandanke; valatab [[mezi|medel]]. Söbäd kut [[desert]] ([[Turkanma]]s) vai [[murgin|murgn'al]] ([[Grekanma]]s).
+Tehtas [[septahtaz|septahthaspäi]] [[korič]]un ližandanke. Räkištadas fritüras, vilugoitusen jäl'ghe valatadas [[mezi|medel]]. Södas kut [[desert]] ([[Turkanma]]s) vai [[murgin|murgn'al]] ([[Grekanma]]s).
 
-Üks' desertan šuruine om pen' surud: lukumades harv söbäd üksin, sikš tobjimalaz kävutadas „lukumades“-sanad äilugus-ki.
+Üks' desertan šuruine om pen' surtte, södas blödad üksin harvoin, sikš kävutadas «lukumades»-sanad tobjimalaz, mitte om äilugus. Sönd tarbhaičeb hangošt. Ku šuruižed oma ainastadud špaguižile, ka voib söda ladlusita.
+
+{{Commons|Category:Lokma}}
 
 {{stub}}
 [[Kategorii:Desertad]]
+[[Kategorii:Araban keitand]]
 [[Kategorii:Grekanman keitand]]
 [[Kategorii:Turkanman keitand]]
-[[Kategorii:Araban keitand]]
