--- a/Lukumades.mw
+++ b/Lukumades.mw
@@ -1,9 +1,11 @@
 [[Fail:Loukoumades.jpg|thumb|right|250px|Lukumades]]
 '''Lukumades''' ({{lang-el|λουκουμάδες}} ''Loukoumades'', {{lang-tr|lokma}}, {{lang-ar|لقمة‎}} ''lukmāt'', لقمة القاضي‎ ''lukmat al-kādi'') om(a) [[Grekanman keitand|grekan]], [[Turkanman keitand|turkan]] da [[araban keitand|araban]] keitandoiden maged emäguz, [[pončik]]an pojav.
 
-Tehtas [[septahtaz|septahthaspäi]] [[korič]]un ližandanke. Räkištadas fritüras, vilugoitusen jäl'ghe valatadas [[mezi|medel]]. Södas kut [[desert]] ([[Turkanma]]s) vai [[murgin|murgn'al]] ([[Grekanma]]s).
+Tehtas [[septahtaz|septahthaspäi]] [[korič]]un ližandanke. Räkištadas fritüras, vilugoitusen jäl'ghe valatadas [[mezi|medel]] vai saharsiropal, pudotadas koričud. Södas kut [[desert]] ([[Turkanma]]s) vai [[murgin|murgn'al]] ([[Grekanma]]s) i surustuseks.
 
 Üks' desertan šuruine om pen' surtte, södas blödad üksin harvoin, sikš kävutadas «lukumades»-sanad tobjimalaz, mitte om äilugus. Sönd tarbhaičeb hangošt. Ku šuruižed oma ainastadud špaguižile, ka voib söda ladlusita.
+
+Blödan nimituz libub araban kelespäi, ''lukmat''-sana znamoičeb «kebn surustuz», «pallišk» (kc. mž. «[[rahat-lukum]]»). Emägusen ''lukmat al-kādi''-toižend om ümbrikirjutadud 13. voz'sadal keitandreceptoiden [[Al'-Bagdadi]]-keradajal.
 
 {{Commons|Category:Lokma}}
 
