--- a/Sjudad_Guajan.mw
+++ b/Sjudad_Guajan.mw
@@ -13,11 +13,15 @@
  | Telefonkod = +58-286
  | Aigvö = [[UTC]]−4
 }}
-'''Sjudad Guajan''' ({{lang-es|Ciudad Guayana}} [sjuˈðað ɣwaˈʝana]) om [[Venesuel]]an kudenz' lidn eläjiden lugun mödhe. Se om [[Bolivar (Venesuelan štat)|Bolivar-štatan]] pälidn.
+'''Sjudad Guajan''' ({{lang-es|Ciudad Guayana}} [sjuˈðað ɣwaˈʝana] «Lidn Guajan») om [[Venesuel]]an kudenz' lidn eläjiden lugun mödhe. Se om [[Bolivar (Venesuelan štat)|Bolivar-štatan]] kaikiš suremb lidn eläjiden lugun mödhe.
 
-Eländpunktan aluz om pandud vn 1961 2. päiväl heinkud sauvomha järedad Guri-gidroelektrostancijad Karoni-jogel 70 km suvhe lidnaspäi. Nece GES pästab valdkundan elektrusen enamba pol't, 4nz' surtte GES mail'mas (2018). Kaks' alüminijantegint i raudmetallurgijan kompanii ratas lidnas.
+== Istorii ==
+Eländpunktan aluz om pandud kahten eländpunktan ühtištusel vn 1961 2. päiväl heinkud sauvomha järedad Guri-gidroelektrostancijad Karoni-jogel 70 km suvhe lidnaspäi. Nece GES pästab valdkundan elektrusen enamba pol't, 4nz' surtte GES mail'mas (2018).
 
-Lidn vedase 40 kilometrad pidust' [[Orinoko]]-jogen oiktad randad. Se sijadase 13 m ü.m.t. keskmäižel korktusel.
+Kaks' alüminijantegint i raudmetallurgijan kompanii ratas lidnas.
+
+== Geografijan andmused ==
+Lidn vedase 40 kilometrad pidust' [[Orinoko]]-jogen oiktad (suvišt) randad, seižub sen kaikiš znamasižemban Karoni-ližajogen lanktendan sijas. Karoni läbitab lidnad suvespäi pohjoižhe i jagab kaks'haze: vanh San Feliks-lidn om päivnouzmas (''San Félix'', alusenpanend 1724), uz' planiruidud Puerto Ordaz ([ˈpweɾto oɾˈðas]) levitase päivlaskmas. Sjudad Guajan sijadase 13 m ü.m.t. keskmäižel korktusel. Matkad štatan [[Sjudad Bolivar]]-pälidnhasai om 110 km ülezjogen.
 
 Vl 2001 eläjiden lugu oli 1 050 283 ristitud, štatan ristitišton läz pol't. Vodele 2006 kombiniruidud raudte- da avtotesild Orinokos päliči om saudud.
 
@@ -27,4 +31,4 @@ Vl 2001 eläjiden lugu oli 1 050 283 ristitud, štatan ristitišton läz pol't. 
 [[Kategorii:Sjudad Guajan| ]]
 [[Kategorii:Venesuelan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
-[[Kategorii:Bolivar (Venesuelan štat)|*]]
+[[Kategorii:Bolivar (Venesuelan štat)]]
