--- a/Kingstaun.mw
+++ b/Kingstaun.mw
@@ -17,14 +17,17 @@
 '''Kingstaun''' ({{lang-en|Kingstown}} «kunigahan lidn») om [[Sent Vinsent da Grenadinad|Sent Vinsentan da Grenadinoiden]] pälidn, kaikiš järedamb lidn da meriport. Mugažo lidn om Sent-Džordž-tulendan administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1722. Kova tullei pani lidnad mantazole vl 1780. Ripmatoman valdkundan pälidn vspäi 1979.
+Eländpunktan aluz om pandud vl 1722. Botanižen sadun aluz om pandud vl 1765, se om kaikiš amuižembišpäi Päivlaskmaižes mapoliškos, levitase 190 m ü.m.t. korktusel. Kova tullei pani lidnad mantazole vl 1780. Keskškolan aluz om pandud vl 1908. Ripmatoman valdkundan pälidn vspäi 1979.
 
 Kingstaun om saren maižandusen, sportan i turizman keskuz.
 
 == Geografijan andmused ==
-Lidn sijadase [[Sent Vinsent]]-saren suvipäivlaskmas, 1 m ü.m.t. keskmäižel korktusel.
+Lidn sijadase [[Sent Vinsent]]-saren suvipäivlaskmas, 1 m ü.m.t. keskmäižel korktusel. Om kaitud tulleišpäi korktoil kukhil.
 
+== Eläjad ==
 Vl 2012 eläjiden lugu oli 12 909 ristitud.
+
+Lidn om [[katoline jumalankodikund|riman katoližen]] eparhijan keskuz, 19. voz'sadan jumalanpertiden rivi om olmas lidnas. Medicinine škol (''Trinity School of Medicine'') om avaitud lidnas. Levitadud sportansugud oma futbol (nell' klubad) i kriket. Muzaverižiden kariboiden istorijan muzei radab lidnas.
 
 Lendimport Ebenezer Džošua nimed radab Kingstaunan suvipäivnouzmaižes Arnos-Veil-ezilidnas. Ehtatim ühtenzoitab Bekii-sarenke.
 
