--- a/Darhan.mw
+++ b/Darhan.mw
@@ -18,12 +18,12 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1961 kuti sauvondmaterialiden pästandan keskuz i industrijan uz' sijaduz.
 
-Darhan šingotase raudan metallurgijan tegimel (om saudud vodele 1990) sijaližel torhudel i sömtegimištol.
+Darhan šingotase [[raud]]an metallurgijan tegimel (om saudud vodele 1990) sijaližel torhudel i sömtegimištol: lihakombinat, jauhfabrik, konditerine fabrik, alkogoližiden i alkogolitomiden jomiden kombinat.
 
 == Geografijan andmused ==
 Lidn sijadase valdkundan pohjoižes, Transmongoližel raudtel, 665 m ü.m.t. keskmäižel korktusel. Om ümbärtud maižanduzrajonal.
 
-Klimat om [[ven vö|ven]] kuiv. Voden keskmäine lämuz om −0,6 C° vilun tal'ven tagut, tal'veližiden kuiden kesklämuz om −21..24 C°. Paneb läz kaikid sadegid kezaaigan.
+Klimat om [[ven vö|ven]] kontinentaline kuiv. Voden keskmäine lämuz om −0,6 C° vilun tal'ven tagut, tal'veližiden kuiden kesklämuz om −21..24 C°. Paneb 309 mm sadegid vodes, läz kaikid kezaaigan.
 
 == Eläjad ==
 Vl 2010 eläjiden lugu oli 74 738 ristitud, agjan viž kudendest. Kaikiš suremb ristitišt om nügüd'.
@@ -33,9 +33,10 @@ Valdkundan kahtenz' znamoičendal openduzkeskuz, 10 professionaližen opendusen 
 == Homaičendad ==
 <references />
 
+== Irdkosketused ==
+* [http://darkhan.mn/ Lidnan oficialine sait (''darkhan.mn'').] {{ref-mn}}
 {{Commons|Category:Darkhan City}}
 
-{{stub}}
 [[Kategorii:Mongolijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Darhan-Uul|*]]
