*Empty MediaWiki Message*

--- a/Darhan.mw
+++ b/Darhan.mw
@@ -34,7 +34,7 @@ Valdkundan kahtenz' znamoičendal openduzkeskuz, 10 professionaližen opendusen 
 <references />
 
 == Irdkosketused ==
-* [http://darkhan.mn/ Lidnan oficialine sait (''darkhan.mn'').] {{ref-mn}}
+* [http://darkhan.gov.mn/ Darhan-Uul-agjan oficialine sait (''darkhan.gov.mn'').] {{ref-mn}}
 {{Commons|Category:Darkhan City}}
 
 [[Kategorii:Mongolijan lidnad]]
