*Empty MediaWiki Message*

--- a/Šrödinger_Ervin.mw
+++ b/Šrödinger_Ervin.mw
@@ -3,9 +3,9 @@
 | изображение = Erwin Schrödinger (1933).jpg
 | описание изображения = Ervin Šrödinger vl 1933
 }}
-'''Ervin Šrödinger''' (saksan virkand ['ɛrvi:n 'ʃrø:dɪŋɐ]), täuz' nimi om '''Ervin Rudol'f Jozef Aleksander Šrödinger''' ({{lang-de|Erwin Rudolf Josef Alexander Schrödinger}}; sünd. 12. eloku 1887, [[Ven]], [[Avstrijan da Mad'jaranman imperii]] — kol. 4. viluku 1961, sigä-žo, [[Avstrii]]), oli [[Avstrii|avstrijalaine]] [[teoretine fizik|teoretižen fizikan]] tedomez', kenen pätedotöd oma [[kvantmehanik]]as, sen üks' alusenpanijoišpäi.
+'''Ervin Šrödinger''' (saksan virkand ['ɛrvi:n 'ʃrø:dɪŋɐ]), täuz' nimi om '''Ervin Rudol'f Jozef Aleksander Šrödinger''' ({{lang-de|Erwin Rudolf Josef Alexander Schrödinger}}; sünd. 12. eloku 1887, [[Ven]], [[Avstrijan da Mad'jaranman imperii]] — kol. 4. viluku 1961, sigä-žo, [[Avstrii]]), oli [[Avstrii|avstrine]] [[teoretine fizik|teoretižen fizikan]] tedomez', kenen pätedotöd oma [[kvantmehanik]]as, sen üks' alusenpanijoišpäi.
 
-E. Šrödinger om voden 1933 [[Nobelän premii|Nobelän premijan]] laureatan.
+E. Šrödinger om voden 1933 [[Nobelän premii|Nobelän premijan]] fizikas laureatan.
 
 Ervin oli üks'jäižen lapsen kanzas. Lahjakaz priha openui matematikad i fizikad Venan universitetas vll 1906−1910. Radoi opendajan Evropan neniden lidnoiden universitetoiš (1911−1914, 1919−1957): Ven, Cürih, Berlin, Oksford, Dublin.
 
