--- a/Šrödinger_Ervin.mw
+++ b/Šrödinger_Ervin.mw
@@ -9,7 +9,7 @@ E. Šrödinger om voden 1933 [[Nobelän premii|Nobelän premijan]] fizikas laure
 
 Ervin oli üks'jäižen lapsen kanzas. Lahjakaz priha openui matematikad i fizikad Venan universitetas vll 1906−1910. Radoi opendajan Evropan neniden lidnoiden universitetoiš (1911−1914, 1919−1957): Ven, Cürih, Berlin, Oksford, Dublin.
 
-Tedomez' kirjuti äi töid fizikan erazvuiččiš sarakoiš. Šrödinger formulirui [[Šrödingeran tazostused|lainehmehanikan tazostusid]], todesti šingotadud hänel formalizman i matricmehanikan ühtejiččust.
+Tedomez' kirjuti äi töid fizikan erazvuiččiš sarakoiš. Šrödinger formulirui [[Šrödingeran tazostused|lainehmehanikan tazostusid]], todesti šingotadud hänel formalizman i matricmehanikan ühtejiččust. Tariči lainehfunkcijan fizižen sün originališt el'gendust, napri säta ühthišt kendan teorijad.
 
 == Homaičendad ==
 <references/>
