--- a/Orenburg.mw
+++ b/Orenburg.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Orenburgan lidnanznam
  | Flag text = Orenburgan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 564,443
- | Voz' = 2017
- | Pind = 259
+ | Eläjiden lugu = 572,819
+ | Voz' = 2021
+ | Pind = 258,57
  | Fail = Orenburg collage.JPG
- | Pämez' = Evgenii Arapov (2015—)
+ | Pämez' = 
  | Telefonkod = +7-3532-xxx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -21,17 +21,41 @@ Eländpunktan aluz om pandud vl 1743 kuti lidnuz da lidn. Vl 1744 se tegihe Oren
 
 Vozil 1938−1957 nimitihe lidnad ''Čkalov:aks'' tutaban lendajan oiktastuseks.
 
+Orenburgan ižandusen päsarakod oma [[londuseline gaz|londuseližen gazan]] samine da sen ümbriradmine, mašinansauvomine (burauduzmašiništ, John Deere-maižanduztehnik, «Uralrentgen», radiatorad), sauvondmaterialad (raudbetontegesed, torved, kuivad sauvondsegoitused), sömtegimišt, orenburgan höunehpaikoiden da katusiden tehmine.
+
 == Geografijan andmused ==
 Lidn sijadase [[Ural (jogi)|Ural]]-jogen molembil randoil, 150 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Moskv]]hasai om 1432 km lodeheze avtotedme. Lähembaine lidn om [[Sol'-Ileck]] 75 km suvhe raudtel vai avtol.
 
-Orenburg jagase kahthe ümbrikho i nellhä administrativižhe rajonha. Leninan rajon da Keskuzrajon mülüdas Suviümbrikho. Pohjoine ümbrik mülütab Dzeržinskijan i Tegimišton rajonid. Kümne žilod mülüdas Orenburgan lidnümbrikho lidnan ližaks, lidnümbrikon pind — 916,91 km².
+Orenburg jagase kahteks ümbrikoks i nelläks administrativižeks rajonaks, kaik ned ei olgoi municipaližikš ühtnikoikš. Leninan rajon da Keskuzrajon mülüdas Suviümbrikho. Pohjoine ümbrik mülütab Dzeržinskijan i Tegimišton rajonid. Kümne žilod mülüdas Orenburgan lidnümbrikho lidnan ližaks, lidnümbrikon pind — 916,91 km².
 
-== Eläjad da transport ==
+== Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 548 331 ristitud, lidnümbrikon — 563 876 ristitud. Vl 2017 kaik 579 677 ristitud eliba lidnümbrikos. Kaikiš suremb lidnan ristitišt om nügüd' (vl 2017).
 
 Rahvahad (lidn, enamba 0,4% vl 2010): [[venälaižed]] — 81,1%, [[totarlaižed]] — 7,6%, [[kazahlaižed]] — 2,0%, [[ukrainalaižed]] — 1,9%, [[baškiralaižed]] — 1,1%, [[armenijalaižed]] — 0,6%, [[mordvinalaižed]] — 0,5%, toižed rahvahad — 2,3%, rahvahuden ozutandata — 2,9%.
 
-Avtobusad, trolleibusad, maršruttaksid i kervačte Ural-joges päliči oma kundaližtransportaks lidnas. Vl 1876 raudte tuli lidnha, i Orenburg om järed raudtesol'm. Rahvahidenkeskeine civiline Jurii Gagarinan nimel nimitadud ''Orenburg-Keskuzline''-lendimport (''REN / ОНГ'') sijadase 19 km päivnouzmha lidnaspäi, tehtas reisid [[Tadžikistan]]ha, Päivlaskmaižen Azijan lebutahoihe, mugažo Venäman järedoihe lidnoihe.
+Edeližed lidnümbrikon pämehed:
+* Vladimir Il'jinih (uhoku 2020 — sügüz'ku 2021),
+* Dmitrii Kulagin (tal'vku 2018 — tal'vku 2019),
+* Jevgenii Arapov<br />(reduku 2015 — reduku 2018).
+
+== Transport ==
+Avtobusad, trolleibusad, maršruttaksid i kervačte Ural-joges päliči oma kundaližtransportaks lidnas. Vl 1876 raudte tuli lidnha, i Orenburg kändihe järedaks raudtesol'meks.
+
+Rahvahidenkeskeine civiline Jurii Gagarinan nimed ''Orenburg-Keskuzline''-lendimport<ref>[http://orenairport.ru/ Orenburg-lendimportan sait (''orenairport.ru'').] {{ref-ru}}</ref> (''REN / ОНГ'', 1 mln passažiroid vl 2021) sijadase 19 km päivnouzmha lidnaspäi. Tehtas reisid [[Uzbekistan]]ha, [[Tadžikistan]]ha, Päivlaskmaižen Azijan lebutahoiže, mugažo Venäman järedoihe lidnoihe.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+|
+|
+NikolskiySoborOrenburg.jpg|Ph. Mikulai-čudonsädajan kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2009 nägu
+Russia Orenburg Karavan-Saray mosque.jpg|Istorine «Karavan-Sarai»-kompleks mečetinke, vn 2017 nägu
+Окрестности газзавода - panoramio.jpg|Orenburgan gazanümbriradai tegim vl 2011
+Orenburg State University.jpg|Orenburgan valdkundaline universitet (2009)
+4 драмтеатр.JPG|Orenburgan agjan dramteatr M. Gor'kijan nimed (2007)
+|
+Orenburgskiy r-n, Orenburgskaya oblast', Russia - panoramio (3).jpg|Orenburg-lendimportan terminal vl 2010
+Russia Orenburg railway station.jpg|Orenburg-päraudtestancijan sauvuz vl 2017
+</gallery>
 
 == Homaičendad ==
 <references />
